--- a/yazoobayou/src/App.css
+++ b/yazoobayou/src/App.css
@@ -8,21 +8,9 @@
 .map {
   height: 300px;
 }
-body {
-  
-  /* left: 0;
-  right: 0; */
-  /* z-index: -1;
-  width: 100%;
-  height: auto;
-  /* -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px); */
-}
+
 #root {
-  background: url(https://lh3.google.com/u/0/d/1e-n9plreaWoL4-Jc8v03m5-WI2ayG-Y_=w1830-h915-iv1)  bottom no-repeat;
+  background: url(./Img/backApt.JPG)  bottom no-repeat;
   background-size: cover;
   background-attachment: fixed;
   z-index: -22;
@@ -34,26 +22,6 @@ body {
         height: 500px;
     }
 }
-
-/* .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-} */
-
-/* .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-} */
-
-/* .App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-} */
 
 /* @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
@@ -72,19 +40,26 @@ col img {
 #content-row2{
   flex-direction: column-reverse;
 }
+.mapHeader{
+  margin-right: -15px;
+  margin-left: -15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .content-row div {
   width: 90%;
   margin: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
 }
 .content-row img {
   align-self: center;
 }
 .content-row h3 {
-  text-align: center;
+  text-align: start;
 }
 .container-home {
   padding-right: 1px;
@@ -103,24 +78,7 @@ col img {
   font-family: serif;
 }
 
-.ok {
-  /* position: absolute; */
-  /* left: 0;
-  right: 0; */
-  /* z-index: -1;
-  width: 100%;
-  height: auto;
-  display: flex;
-  margin-top: -30px;
-  background: url(../src/img/Barrels.JPG) center;
-  background-attachment: fixed;
 
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px); */
-}
 @media (min-width: 768px){
   .container-home {
       width: 750px;
@@ -132,8 +90,9 @@ col img {
     flex-direction: row;
   }
   #content-row2{
-    flex-direction: row;
+    flex-direction: column;
   }
+ 
   .ok {
     height: 1250px;
   }
@@ -162,9 +121,10 @@ col img {
   align-items: center;
   flex-direction: column;
   margin-top: 20px;
-  background: radial-gradient(#37526b, #38576b, #1d3a55);
+  /* background: radial-gradient(#37526b, #38576b, #1d3a55); */
+  background-color: #000000;
   /* background-image: none; */
-  color: beige;
+  color: white;
   /* position: absolute; */
   bottom: 0;
 }
@@ -192,10 +152,10 @@ col img {
   width: 100%;
 }
 .home-paragraph h3 {
-  color: rgb(99, 49, 49);
+  color: #000000;
 }
 .red-header {
-  color: rgb(99, 49, 49);
+  color: #000000;
 }
 .home-wine-container {
   padding: 20px;
@@ -240,9 +200,9 @@ col img {
 }
 .jumbotron .inner{
   height: 200px;  
-  /* background: radial-gradient(#ebedf010, #e1e5e9, #6e869c7e); */
+  background: radial-gradient(#23292028, #3d443c83, #3e463af5);
   /* background-color: #7e9db9e7; */
-  background: url(../src/Img/backdropYazoo.jpg);
+  /* background: url(../src/Img/backdropYazoo.jpg); */
   background-position: -0px -0px;
   background-size: 100% 100% !important; 
   display:flex; 
@@ -253,13 +213,7 @@ col img {
   
 }
 
-/* .jumbotron .inner img{
-  position: absolute;
-  width: 70%;
-  margin-top: 40px; 
-  -webkit-filter: drop-shadow(2px 54px 0.9px rgba(0, 0, 0, 0.02));
-  filter: drop-shadow(2px 54px 0.9px rgba(0, 0, 0, 0.02));
-} */
+
 .jumbotron .inner h1{
   font-family: cursive;
   -webkit-filter: drop-shadow(1px 2px 0.0px rgb(8, 16, 61));
@@ -370,8 +324,8 @@ col img {
     width: 700px;
     margin-top: -160px; 
     color: transparent;
-    -webkit-filter: drop-shadow(0px 183px 0.0px rgb(61, 8, 10));
-    filter: drop-shadow(0px 183px 0.0px rgb(61, 8, 10));
+    -webkit-filter: drop-shadow(0px 183px 0.0px rgb(3, 3, 11));
+    filter: drop-shadow(0px 183px 0.0px rgb(2, 3, 7));
     }
     .jumbotron .inner  h2{
       font-size: 24px;
