--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,9 @@
+@import './variables';
+
 .jumbotron {
     background-color: rgb(255, 255, 255);
-    border-top: rgb(7, 30, 7) 40px solid;
+    border-top: $primary_color 40px solid;
+    border-bottom: none;
   }
 
 .jumbotron .inner{
@@ -14,8 +17,10 @@
   }
 
   .jumbotron .inner h1{
+    position: absolute;
+    right: 5%;
     width: max-content;
-    color: rgb(16, 18, 16);
+    color: $primary_color;
     text-align: center;
     font-size: 4rem;
     font-weight: 600;
@@ -23,7 +28,34 @@
     text-transform:none; 
     -webkit-background-clip: text;
     
-    /* text-rendering: geometricPrecision; */
-    //text-decoration: underline;
-    // text-underline-position: below; 
+  }
+
+  .logo-image{
+    background: url('../Img/logo/yazoo-bayou-logo.png') no-repeat;
+    background-size: contain;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: 1%;
+    filter: brightness(0) saturate(1000%) hue-rotate(90deg);
+
+  }
+
+  @media (max-width: 450px) {
+    .jumbotron .inner h1{
+      right: inherit;
+      font-size: 3.25rem; 
+    }
+  }
+
+  @media (max-width: 400px) {
+    .jumbotron .inner h1{
+      font-size: 3rem; 
+    }
+  }
+
+  @media (max-width: 340px) {
+    .jumbotron .inner h1{
+      font-size: 2.75rem; 
+    }
   }
