--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,7 +15,7 @@ h3{
 .image-container{
     height: 75vh;
     position: relative;
-    background-image: url('../Img/apartment-close-view.JPG');
+    background-image: url('../Img/apt-close-view.JPG');
     background-size: cover; /* Adjusts the background image to cover the container */
     background-position: 50% 67%; /* Centers the background image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
